<?xml version="1.0" encoding="UTF-8" ?>
<resources>
    <string name="app_name">mjuBank</string>

    <string name="title_home">首页</string>
    <string name="title_dashboard">财富</string>
    <string name="title_notifications">个人</string>

    <string name="login_account">帐号</string>
    <string name="login_passwd">密码</string>
    <string name="login_account_hint">请输入手机号</string>
    <string name="login_passwd_hint">请输入密码</string>
    <string name="login_protocol">同意协议</string>
    <string name="login_button">登录</string>

    <string name="auth_id">身份证号:</string>
    <string name="auth_id_hint">请输入身份证号</string>
    <string name="auth_date">请选择身份证到期时间</string>
    <string name="auth_confirm">提交</string>

    <string name="home_login_hint">当前未登录</string>
    <string name="home_prod">产品列表</string>

    <string name="asset_show">资产:</string>
    <string name="asset_purchased">已购买产品</string>

    <string name="detail_header_title">年化利率</string>
    <string name="detail_header_prod">产品名称</string>
    <string name="detail_header_risk">风险等级</string>
    <string name="detail_header_min">起存金额</string>
    <string name="detail_header_inc">最小增加金额</string>

    <string name="detail_due_date">到期日：</string>
    <string name="detail_purchase_hint">购买金额</string>
    <string name="detail_confirm">确定</string>
    <string name="detail_helper">金额: %1$d-%2$d 元 增加额度: %3$d 元</string>

    <string name="dialog_amount">金额: %1$d</string>
    <string name="dialog_due">%1$s购买</string>

    <string name="product_amount">每日最高可购买：￥</string>
    <string name="product_rate">年利率：</string>
    <string name="product_suffix">%</string>

    <string name="asset_due">到期时间：</string>
    <string name="asset_amount">购买金额：</string>
    <string name="asset_amount_suffix">元</string>
    <string name="user_hero">user hero</string>
    <string name="title_activity_purchase">PurchaseActivity</string>
</resources>