<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailHeader">
    <TextView
        android:id="@+id/product"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/detail_header_prod"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="@id/v50"
        android:textSize="@dimen/font_size"/>
    <TextView
        android:id="@+id/date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@id/rate"
        app:layout_constraintEnd_toStartOf="@id/rate"
        android:text="@string/detail_header_title"/>
    <TextView
        android:id="@+id/rate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/detail_header_title"
        app:layout_constraintTop_toTopOf="@id/product"
        app:layout_constraintStart_toStartOf="@id/v50"
        app:layout_constraintEnd_toEndOf="parent"
        android:textColor="@color/red"
        android:textSize="@dimen/font_size"/>
    <TextView
        android:id="@+id/risk_level"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/detail_header_risk"
        android:textSize="@dimen/font_size_middle"
        android:layout_marginTop="@dimen/field_start_margin"
        app:layout_constraintTop_toBottomOf="@id/product"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="@id/v50" />
    <TextView
        android:id="@+id/cal_method"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/detail_header_cal"
        android:textSize="@dimen/font_size_middle"
        app:layout_constraintTop_toTopOf="@id/risk_level"
        app:layout_constraintStart_toStartOf="@id/v50"
        app:layout_constraintEnd_toEndOf="parent"/>
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/v50"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5"/>

</androidx.constraintlayout.widget.ConstraintLayout>