<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailActivity">
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/large_margin"
        app:layout_constraintTop_toTopOf="parent"
        app:cardElevation="@dimen/little_margin"
        app:cardCornerRadius="@dimen/activity_margin">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:id="@+id/product"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/detail_header_prod"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="@dimen/activity_margin"
                android:layout_marginStart="@dimen/activity_margin"
                android:textSize="@dimen/font_size_large"/>
            <TextView
                android:id="@+id/date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/rate"
                app:layout_constraintStart_toStartOf="@id/rate"
                android:text="@string/detail_header_title"/>
            <TextView
                android:id="@+id/rate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_margin"
                app:layout_constraintTop_toBottomOf="@id/product"
                app:layout_constraintStart_toStartOf="@id/product"
                android:textColor="@color/red"
                android:textSize="@dimen/font_size"/>
            <TextView
                android:id="@+id/rate_suf"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="%"
                android:layout_marginStart="@dimen/little_margin"
                app:layout_constraintBottom_toBottomOf="@id/rate"
                app:layout_constraintStart_toEndOf="@id/rate" />
            <TextView
                android:id="@+id/minAmount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/detail_header_min"
                android:textSize="@dimen/font_size_middle"
                app:layout_constraintBottom_toBottomOf="@id/date"
                app:layout_constraintEnd_toStartOf="@id/buy_amount"/>
            <TextView
                android:id="@+id/buy_amount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toStartOf="@id/amount_suf"
                app:layout_constraintBottom_toBottomOf="@id/minAmount"
                android:textSize="@dimen/font_size"/>
            <TextView
                android:id="@+id/amount_suf"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="@id/minAmount"
                android:layout_marginEnd="@dimen/activity_margin"
                android:text="元"
                android:textSize="@dimen/font_size_middle"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
    <TextView
        android:id="@+id/due_prefix"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/detail_due_date"
        app:layout_constraintBottom_toTopOf="@id/input_guide"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.25"
        android:textSize="@dimen/font_size"/>
    <TextView
        android:id="@+id/due_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/due_prefix"
        app:layout_constraintBottom_toTopOf="@id/input_guide"
        android:textSize="@dimen/font_size"/>
    <EditText
        android:id="@+id/input"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/input_guide"
        android:background="#eeeeee"
        android:layout_marginStart="@dimen/large_margin"
        android:layout_marginEnd="@dimen/large_margin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:inputType="numberDecimal"
        android:hint="@string/detail_purchase_hint"
        android:autofillHints=""/>
    <Button
        android:id="@+id/confirm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/button_round"
        android:layout_margin="@dimen/large_margin"
        app:layout_constraintTop_toBottomOf="@id/input"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/detail_confirm"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/input_guide"
        tools:viewModelIgnore="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.6"/>
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/marginTop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        tools:viewModelIgnore="true"
        app:layout_constraintGuide_begin="@dimen/double_large_margin"/>
</androidx.constraintlayout.widget.ConstraintLayout>