<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/account_editor_lay"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/field_start_margin"
        android:hint="@string/login_account_hint"

        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="@dimen/field_start_margin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/account_headline"

        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/account_editor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:autofillHints="phone"
            android:inputType="phone" />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passwd_editor_lay"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/field_start_margin"
        android:hint="@string/login_passwd_hint"
        app:endIconMode="password_toggle"

        android:layout_marginTop="@dimen/field_start_margin"
        android:layout_marginStart="@dimen/field_start_margin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/account_editor_lay"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/passwd_editor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:autofillHints="password"

            android:inputType="textPassword" />

    </com.google.android.material.textfield.TextInputLayout>

    <CheckBox
        android:id="@+id/protocol"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/login_protocol"
        android:textSize="@dimen/font_size_middle"

        android:layout_marginTop="@dimen/field_start_margin"
        android:layout_marginStart="@dimen/field_start_margin"
        app:layout_constraintEnd_toStartOf="@id/vert_half"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/passwd_editor_lay" />
    <com.google.android.material.button.MaterialButton
        android:id="@+id/login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/font_size"
        android:text="@string/login_button"
        android:layout_marginTop="@dimen/field_start_margin"
        app:cornerRadius="25dp"
        app:strokeColor="@color/black"
        app:strokeWidth="3dp"
        app:layout_constraintTop_toBottomOf="@id/protocol"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/account_headline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.3"
        tools:viewBindingIgnore="true"/>
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/vert_half"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5"
        tools:viewBindingIgnore="true"/>
</androidx.constraintlayout.widget.ConstraintLayout>